--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -1,3 +1,9 @@
+<!--//!/usr/bin/env nodejs
+// encoding=utf-8
+//codeby     道长且阻
+//email      ydhcui@suliu.net/QQ664284092
+-->
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 
